# Memories

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/api/: main.py  metrics.py  rate_limit.py
apps/api/middleware/: __init__.py  auth.py  errors.py  logging.py
apps/api/models/: __init__.py  authentication.py  requests.py  responses.py
apps/api/routers/: __init__.py  ask.py  entities.py  health.py  ingest.py
apps/api/services/: __init__.py  llm.py  planner.py  retrieval.py
apps/workers/: model_manager.py  orchestrator.py
apps/workers/embeddings/: __init__.py  image.py  rerank.py  text.py
apps/workers/processors/: audio_processor.py  dedup.py  document_processor.py  image_processor.py  (+2 more)
connectors/: __init__.py  base.py  browser.py  calendar.py  drive.py  gmail.py  google_auth.py  imap.py  local_fs.py  notion.py  obsidian.py  photos.py  slack.py  state_store.py  takeout.py
core/: config.py  logging.py
core/cache/: __init__.py  valkey_client.py
core/graph/: __init__.py  client.py  queries.py
core/storage/: __init__.py  minio_client.py
core/system/: memory.py
core/vectors/: __init__.py  lancedb_client.py
db/: neo4j_bootstrap.cypher
docs/: API.md  ARCHITECTURE.md  CONNECTORS.md  DEPLOYMENT.md  TROUBLESHOOTING.md
ops/: prometheus.yml
scripts/: backup.py  backup.sh  health_check.py  restore.py  restore.sh  seed_data.py
tests/integration/: test_connectors.py
tests/unit/: test_document_processor.py  test_query_planner.py  test_retrieval_orchestrator.py
ui/: gradio_app.py
(+1 files in other folders)
